# srt-rs

./: Cargo.toml  README.md
libsrt-sys/: Cargo.toml  build.rs  wrapper.h
libsrt-sys/src/: lib.rs
src/: error.rs  lib.rs  socket.rs
