[package]
name = "srt-rs"
version = "0.2.6"
authors = ["Hieu Nguyen <nthieu173@gmail.com>", "gvsyn <projects@lostnode.org>"]
edition = "2018"
license = "MPL-2.0"
description = "Idiomatic rust binding to libsrt"
repository = "https://github.com/gvsyn/srt-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libsrt-sys = { path = "libsrt-sys", version = "1.5.3" }
libc = "0.2.126"
futures = "0.3.21"

os_socketaddr = "0.2.1"
cmake = "=0.1.45"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winsock2"] }

[features]
static = [ "libsrt-sys/static" ]
